--- a/Capstone project-3 Health_Care/2_Data_wrangling.ipynb
+++ b/Capstone project-3 Health_Care/2_Data_wrangling.ipynb
@@ -18,17 +18,16 @@
     "   - Change the type of some columns\n",
     "2. **Text data cleaning** \n",
     "   - Make text all lower case\n",
-    "   - Removing URLs\n",
+    "   - Remove URLs\n",
     "   - Remove punctuation\n",
     "   - Remove common non-sensical text (\\n)\n",
-    "   - Remove the emoji\n",
     "   - Remove stopwords\n",
     "\n",
     "\n",
     "## Problem Statement\n",
     "Health is one of  the most important things in our life. But different people have different concerns about their health. \n",
     "\n",
-    "The goal of this project is to know what type of health people are concerned about more, and apply the sentiment analysis to check how negative they think about their health, and how much time they cost on their health.\n",
+    "The goal of this project is to know what type of health people are concerned about more, and apply the sentiment analysis to check how negative they think about their health.\n",
     "\n",
     "## Loading the data\n"
    ]
@@ -62,6 +61,22 @@
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "# Load all datasets\n",
+    "df_1 = pd.read_csv('data/20201110_220931_health_tweets.csv')\n",
+    "df_2 = pd.read_csv('data/20201111_065943_health_tweets.csv')\n",
+    "df_3 = pd.read_csv('data/20201111_143013_health_tweets.csv')\n",
+    "df_4 = pd.read_csv('data/20201112_030746_health_tweets.csv')\n",
+    "df_5 = pd.read_csv('data/20201112_113022_health_tweets.csv')\n",
+    "df_6 = pd.read_csv('data/20201112_230533_health_tweets.csv')\n",
+    "df_7 = pd.read_csv('data/20201113_071344_health_tweets.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -165,19 +180,21 @@
        "4  @MX_7Mention @OfficialMonstaX @official__wonho...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_1 = pd.read_csv('data/20201110_220931_health_tweets.csv')\n",
-    "df_1.head()"
+    "# merge all datasets to one\n",
+    "frames = [df_1, df_2, df_3, df_4, df_5, df_6, df_7] \n",
+    "df = pd.concat(frames)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,23 +202,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 67500 entries, 0 to 67499\n",
+      "Int64Index: 472500 entries, 0 to 67499\n",
       "Data columns (total 6 columns):\n",
-      " #   Column            Non-Null Count  Dtype \n",
-      "---  ------            --------------  ----- \n",
-      " 0   user_name         67500 non-null  object\n",
-      " 1   user_description  59744 non-null  object\n",
-      " 2   user_location     46512 non-null  object\n",
-      " 3   tweetID           67500 non-null  int64 \n",
-      " 4   date              67500 non-null  object\n",
-      " 5   text              67500 non-null  object\n",
+      " #   Column            Non-Null Count   Dtype \n",
+      "---  ------            --------------   ----- \n",
+      " 0   user_name         472500 non-null  object\n",
+      " 1   user_description  414194 non-null  object\n",
+      " 2   user_location     322606 non-null  object\n",
+      " 3   tweetID           472500 non-null  int64 \n",
+      " 4   date              472500 non-null  object\n",
+      " 5   text              472500 non-null  object\n",
       "dtypes: int64(1), object(5)\n",
-      "memory usage: 3.1+ MB\n"
+      "memory usage: 25.2+ MB\n"
      ]
     }
    ],
    "source": [
-    "df_1.info()"
+    "df.info()"
    ]
   },
   {
@@ -213,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +310,7 @@
        "4  @MX_7Mention @OfficialMonstaX @official__wonho...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +318,7 @@
    "source": [
     "# let's select the needed columns\n",
     "needed_columns = ['user_name', 'date', 'text']\n",
-    "df = df_1[needed_columns]\n",
+    "df = df[needed_columns]\n",
     "df.head()"
    ]
   },
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,38 +399,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>67494</th>\n",
+       "      <td>thepotatsaIad</td>\n",
+       "      <td>2020-11-09 23:56:33</td>\n",
+       "      <td>@CireFlame @nytimes https://t.co/SK9hpYIHsb  i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>67495</th>\n",
-       "      <td>rashidbinnur</td>\n",
-       "      <td>2020-11-03 23:51:45</td>\n",
-       "      <td>Ugh I'm simping</td>\n",
+       "      <td>MadnessTouch</td>\n",
+       "      <td>2020-11-09 23:56:33</td>\n",
+       "      <td>Imma be honest I literally know 3or 4 mufos. I...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>67496</th>\n",
-       "      <td>AntiWokeBritain</td>\n",
-       "      <td>2020-11-03 23:51:45</td>\n",
-       "      <td>Ferguson/ICL model premise: interventions simp...</td>\n",
+       "      <td>rob_stayton</td>\n",
+       "      <td>2020-11-09 23:56:33</td>\n",
+       "      <td>\"Today is a really historic day in the history...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>67497</th>\n",
-       "      <td>MaconBibb</td>\n",
-       "      <td>2020-11-03 23:51:45</td>\n",
-       "      <td>Commissioners approve agreement with @NewtownM...</td>\n",
+       "      <td>australiawhisky</td>\n",
+       "      <td>2020-11-09 23:56:33</td>\n",
+       "      <td>@doorsausage @profesterman On balance though N...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>67498</th>\n",
-       "      <td>MaryRarick</td>\n",
-       "      <td>2020-11-03 23:51:44</td>\n",
-       "      <td>@brat2381 My mouth is watering. I have ham hoc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67499</th>\n",
-       "      <td>Sudolion</td>\n",
-       "      <td>2020-11-03 23:51:44</td>\n",
-       "      <td>Ugh. I hate it when those 'waterbug' roaches g...</td>\n",
+       "      <td>madepilita</td>\n",
+       "      <td>2020-11-09 23:56:32</td>\n",
+       "      <td>Less than 1-week after the election, Dr. Antho...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>46716 rows × 3 columns</p>\n",
+       "<p>326454 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -424,11 +441,11 @@
        "2503          Valcore_  2020-11-03 23:59:59   \n",
        "2504          JoanaBCT  2020-11-03 23:59:59   \n",
        "...                ...                  ...   \n",
-       "67495     rashidbinnur  2020-11-03 23:51:45   \n",
-       "67496  AntiWokeBritain  2020-11-03 23:51:45   \n",
-       "67497        MaconBibb  2020-11-03 23:51:45   \n",
-       "67498       MaryRarick  2020-11-03 23:51:44   \n",
-       "67499         Sudolion  2020-11-03 23:51:44   \n",
+       "67494    thepotatsaIad  2020-11-09 23:56:33   \n",
+       "67495     MadnessTouch  2020-11-09 23:56:33   \n",
+       "67496      rob_stayton  2020-11-09 23:56:33   \n",
+       "67497  australiawhisky  2020-11-09 23:56:33   \n",
+       "67498       madepilita  2020-11-09 23:56:32   \n",
        "\n",
        "                                                    text  \n",
        "2500                           anxiety on x games mode 😳  \n",
@@ -437,16 +454,16 @@
        "2503   @ewjulii Count the ways Funtime Freddy doing t...  \n",
        "2504   @MX_7Mention @OfficialMonstaX @official__wonho...  \n",
        "...                                                  ...  \n",
-       "67495                                    Ugh I'm simping  \n",
-       "67496  Ferguson/ICL model premise: interventions simp...  \n",
-       "67497  Commissioners approve agreement with @NewtownM...  \n",
-       "67498  @brat2381 My mouth is watering. I have ham hoc...  \n",
-       "67499  Ugh. I hate it when those 'waterbug' roaches g...  \n",
+       "67494  @CireFlame @nytimes https://t.co/SK9hpYIHsb  i...  \n",
+       "67495  Imma be honest I literally know 3or 4 mufos. I...  \n",
+       "67496  \"Today is a really historic day in the history...  \n",
+       "67497  @doorsausage @profesterman On balance though N...  \n",
+       "67498  Less than 1-week after the election, Dr. Antho...  \n",
        "\n",
-       "[46716 rows x 3 columns]"
+       "[326454 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -466,15 +483,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20784 entries, 0 to 20783\n",
+      "RangeIndex: 146046 entries, 0 to 146045\n",
       "Data columns (total 3 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   user_name  20784 non-null  object\n",
-      " 1   date       20784 non-null  object\n",
-      " 2   text       20784 non-null  object\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   user_name  146046 non-null  object\n",
+      " 1   date       146046 non-null  object\n",
+      " 2   text       146046 non-null  object\n",
       "dtypes: object(3)\n",
-      "memory usage: 487.2+ KB\n"
+      "memory usage: 3.3+ MB\n"
      ]
     }
    ],
@@ -489,12 +506,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here, we got big amount of duplicate rows, that's probably because one tweet includes more keywords and extract multiple time. I got 146,046 tweets after dropping the duplicate rows. The final amount of tweets should be enough to do analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Change the type of some columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,31 +550,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>15317</td>\n",
+       "      <td>104885</td>\n",
        "      <td>2020-11-03</td>\n",
        "      <td>anxiety on x games mode 😳</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3333</td>\n",
+       "      <td>23653</td>\n",
        "      <td>2020-11-03</td>\n",
        "      <td>@OfficialMonstaX\\nOh i'm sorry      did i make...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18410</td>\n",
+       "      <td>126001</td>\n",
        "      <td>2020-11-03</td>\n",
        "      <td>The way some of you dey see your body for this...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8294</td>\n",
+       "      <td>57974</td>\n",
        "      <td>2020-11-03</td>\n",
        "      <td>@ewjulii Count the ways Funtime Freddy doing t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3949</td>\n",
+       "      <td>27889</td>\n",
        "      <td>2020-11-03</td>\n",
        "      <td>@MX_7Mention @OfficialMonstaX @official__wonho...</td>\n",
        "    </tr>\n",
@@ -560,14 +584,14 @@
       ],
       "text/plain": [
        "   user_name        date                                               text\n",
-       "0      15317  2020-11-03                          anxiety on x games mode 😳\n",
-       "1       3333  2020-11-03  @OfficialMonstaX\\nOh i'm sorry      did i make...\n",
-       "2      18410  2020-11-03  The way some of you dey see your body for this...\n",
-       "3       8294  2020-11-03  @ewjulii Count the ways Funtime Freddy doing t...\n",
-       "4       3949  2020-11-03  @MX_7Mention @OfficialMonstaX @official__wonho..."
+       "0     104885  2020-11-03                          anxiety on x games mode 😳\n",
+       "1      23653  2020-11-03  @OfficialMonstaX\\nOh i'm sorry      did i make...\n",
+       "2     126001  2020-11-03  The way some of you dey see your body for this...\n",
+       "3      57974  2020-11-03  @ewjulii Count the ways Funtime Freddy doing t...\n",
+       "4      27889  2020-11-03  @MX_7Mention @OfficialMonstaX @official__wonho..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,16 +607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20784, 3)"
+       "(146046, 3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,39 +634,37 @@
     "- Make text all lower case\n",
     "- Removing URLs\n",
     "- Remove punctuation\n",
-    "- Remove words containing numbers\n",
     "- Remove common non-sensical text (\\n)\n",
-    "- Remove the emoji\n",
     "- Remove stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create emoji pattern\n",
-    "emoji_pattern = re.compile(pattern = \"[\"\n",
-    "        u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
-    "        u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
-    "        u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
-    "        u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
-    "        u\"\\U00002500-\\U00002BEF\"  # chinese char\n",
-    "        u\"\\U00002702-\\U000027B0\"\n",
-    "        u\"\\U00002702-\\U000027B0\"\n",
-    "        u\"\\U000024C2-\\U0001F251\"\n",
-    "        u\"\\U0001f926-\\U0001f937\"\n",
-    "        u\"\\U00010000-\\U0010ffff\"\n",
-    "        u\"\\u2640-\\u2642\"\n",
-    "        u\"\\u2600-\\u2B55\"\n",
-    "        u\"\\u200d\"\n",
-    "        u\"\\u23cf\"\n",
-    "        u\"\\u23e9\"\n",
-    "        u\"\\u231a\"\n",
-    "        u\"\\ufe0f\"  # dingbats\n",
-    "        u\"\\u3030\"\n",
-    "                           \"]+\", flags = re.UNICODE)\n",
+    "#emoji_pattern = re.compile(pattern = \"[\"\n",
+    "#        u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "#        u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "#        u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "#        u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "#        u\"\\U00002500-\\U00002BEF\"  # chinese char\n",
+    "#        u\"\\U00002702-\\U000027B0\"\n",
+    "#        u\"\\U00002702-\\U000027B0\"\n",
+    "#        u\"\\U000024C2-\\U0001F251\"\n",
+    "#        u\"\\U0001f926-\\U0001f937\"\n",
+    "#        u\"\\U00010000-\\U0010ffff\"\n",
+    "#        u\"\\u2640-\\u2642\"\n",
+    "#        u\"\\u2600-\\u2B55\"\n",
+    "#        u\"\\u200d\"\n",
+    "#        u\"\\u23cf\"\n",
+    "#        u\"\\u23e9\"\n",
+    "#        u\"\\u231a\"\n",
+    "#        u\"\\ufe0f\"  # dingbats\n",
+    "#        u\"\\u3030\"\n",
+    "#                           \"]+\", flags = re.UNICODE)\n",
     "\n",
     "# Get the stopwords\n",
     "stop_words = set(stopwords.words('English'))\n",
@@ -653,7 +675,7 @@
     "    text = text.lower() # make text lowercase\n",
     "    text = ' '.join([word for word in text.split() if word not in stop_words]) # remove stopwords\n",
     "    text = text.translate(str.maketrans('','',string.punctuation)) # remove punctuation\n",
-    "    text = emoji_pattern.sub(r'', text) # remove emoji\n",
+    "#    text = emoji_pattern.sub(r'', text) # remove emoji\n",
     "    text = re.sub('\\n', '', text) #remove common non-sensical text (\\n)\n",
     "    \n",
     "    return text\n",
@@ -663,27 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                    anxiety x games mode \n",
-       "1                 officialmonstax oh im sorry make anxious\n",
-       "2          way dey see body app top deɛ asɛ mo nta mpo kai\n",
-       "3        ewjulii count ways funtime freddy whip nae nae...\n",
-       "4        mx7mention officialmonstax officialwonho love ...\n",
-       "                               ...                        \n",
-       "20779                                       ugh im simping\n",
-       "20780    fergusonicl model premise interventions simply...\n",
-       "20781    brat2381 mouth watering ham hocks freezer time...\n",
-       "20782    ugh hate waterbug roaches get outside know the...\n",
-       "20783    neilclark66 witty clearly unwell  blackmailed ...\n",
-       "Name: text, Length: 20784, dtype: object"
+       "0                                    anxiety x games mode 😳\n",
+       "1                  officialmonstax oh im sorry make anxious\n",
+       "2           way dey see body app top deɛ asɛ mo nta mpo kai\n",
+       "3         ewjulii count ways funtime freddy whip nae nae...\n",
+       "4         mx7mention officialmonstax officialwonho love ...\n",
+       "                                ...                        \n",
+       "146041    imma honest literally know 3or 4 mufos would w...\n",
+       "146042    today really historic day history public healt...\n",
+       "146043    doorsausage profesterman balance though nsw ha...\n",
+       "146044    less 1week election dr anthony fauci says news...\n",
+       "146045    ill make official post tomorrow ab unf spree w...\n",
+       "Name: text, Length: 146046, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
